...
        <item>Date</item>
        <item>Price</item>
        <item>Name</item>
        <item>Category</item>
    </string-array>
    <string name="sort">Sort</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string-array name="order_ascending_descending">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="chats_title">Chats</string>
    <string name="username">Username</string>
    <string name="profilePicture">profilePicture</string>
    <string name="logged_out_user_info_chat">You need to be logged in to chat.</string>
    <string name="messageHint">Your message…</string>
    <string name="chat">Chat</string>
    <string name="new_item_notification_message">A new item has been posted!</string>
    <string name="new_item_notification_channel_description">You receive a notification when a new item that is a category you subscribed to is posted.</string>
    <string name="chat_notification_channel_description">You receive a notification when another user sends you a message.</string>
    <string name="not_subscribed">You are not subscribed to any category yet!</string>
    <string name="see_subscriptions">See subscriptions</string>
    <string name="sold">Sold</string>
    <string name="subscribed_to">You are subscribed to these categories:\u0020</string>
    <string name="is_request">Is it a request?</string>
    <string name="offers">Offers</string>
    <string name="requests">Requests</string>
    <string name="message">message</string>
    <string name="buy">Buy</string>
    <string name="sold_list_title">Sold List</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="category">Category:</string>
    <string name="required_field">Required field</string>
    <string name="locate_item">Locate Item</string>
    <string name="num_unread">numUnread</string>
    <string name="open_camera">Open Camera</string>
    <string name="is_discount">Discount?</string>
    <string name="discount_lower">Discount price must be lower</string>
    <string name="lastUpdate">lastUpdate</string>
    <string name="eng_seconds">s</string>
    <string name="eng_minutes">min</string>
...
    <string name="quantity">Quantity</string>
    <string name="_1">1</string>
    <string name="incorrect_quantity">Incorrect Quantity Selected</string>
    <string name="discounts">Discounts</string>
    <string name="sold_button">Sold</string>
    <string name="bought_button">Purchased</string>
    <string name="message_time">Time</string>
    <string name="eng_jan">Jan</string>
    <string name="eng_feb">Feb</string>
    <string name="eng_mar">Mar</string>
    <string name="eng_apr">Apr</string>
    <string name="eng_may">May</string>
    <string name="eng_jun">Jun</string>
...
