<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sold_list"
        android:title="@string/sold"
        android:icon="@drawable/ic_baseline_money_off_white_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/subscription_list"
        android:title="@string/see_subscriptions"
        app:showAsAction="never" />
</menu>
