<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuSubscribe"
        android:icon="@drawable/ic_baseline_notifications_white_24"
        android:title="@string/subscribe"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuUnsubscribe"
...
